# client_py_LIDAR

./: README.md  certificate.pem  main.py  private_key.pem  pyproject.toml  setup.py
src/application/use_cases/: controls.py  history.py  monitor.py
src/domain/: dto.py  entity.py  set_cmd_mode.py
src/infrastructure/: memory_history_repo.py  opcua_connector.py
src/presentation/: bokeh_app.py
